--- a/_sass/minimal-mistakes/skins/_dark.scss
+++ b/_sass/minimal-mistakes/skins/_dark.scss
@@ -3,7 +3,8 @@
    ========================================================================== */
 
 /* Colors */
-$background-color: #252a34 !default;
+// $background-color: #252a34 !default;
+$background-color: #181a1b !default;
 $text-color: #eaeaea !default;
 $primary-color: #00adb5 !default;
 $border-color: mix(#fff, $background-color, 20%) !default;
