--- a/_sass/minimal-mistakes/skins/_dark.scss
+++ b/_sass/minimal-mistakes/skins/_dark.scss
@@ -5,7 +5,7 @@
 /* Colors */
 // $background-color: #252a34 !default;
 $background-color: #181a1b !default;
-$text-color: #eaeaea !default;
+$text-color: #e2e2e2 !default;
 $primary-color: #00adb5 !default;
 $border-color: mix(#fff, $background-color, 20%) !default;
 $code-background-color: mix(#000, $background-color, 15%) !default;
