--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -28,7 +28,17 @@ layout: default
         <header>
           {% if page.title %}<h1 id="page-title" class="page__title" itemprop="headline">{{ page.title | markdownify | remove: "<p>" | remove: "</p>" }}</h1>{% endif %}
           {% if page.read_time %}
+<!--
             <p class="page__meta"><i class="far fa-clock" aria-hidden="true"></i> {% include read-time.html %}</p>
+            devinlife comments :
+                싱글 페이지(포스트)에 제목 밑에 Updated 시간 표기
+                기존에는 read_time이 표기. read_time -> date 변경
+-->
+            <p class="page__date">
+              <i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i>
+              최초 작성일: <time datetime="{{ page.date | date_to_xmlschema }}">{{ page.date | date: "%Y.%m.%d %H:%M" }}</time>
+              ~ {{ site.data.ui-text[site.locale].date_label | default: "Updated:" }} <time datetime="{{ page.last_modified_at | date_to_xmlschema }}">{{ page.last_modified_at | date: "%Y.%m.%d %H:%M" }}</time>
+            </p>
           {% endif %}
         </header>
       {% endunless %}
@@ -38,8 +48,7 @@ layout: default
           <aside class="sidebar__right {% if page.toc_sticky %}sticky{% endif %}">
             <nav class="toc">
               <header><h4 class="nav__title"><i class="fas fa-{{ page.toc_icon | default: 'file-alt' }}"></i> {{ page.toc_label | default: site.data.ui-text[site.locale].toc_label | default: "On this page" }}</h4></header>
-              {% include toc.html sanitize=true html=content h_min=1 h_max=3 class="toc__menu" %}
-              <!-- {% include toc.html sanitize=true html=content h_min=1 h_max=6 class="toc__menu" %} -->
+              {% include toc.html sanitize=true html=content h_min=1 h_max=6 class="toc__menu" %}
             </nav>
           </aside>
         {% endif %}
