--- a/_sass/minimal-mistakes/_tables.scss
+++ b/_sass/minimal-mistakes/_tables.scss
@@ -25,11 +25,13 @@ th {
   padding: 0.5em;
   font-weight: bold;
   text-align: left;
+  border: 1px solid mix(#000, $border-color, 30%);
 }
 
 td {
   padding: 0.5em;
-  border-bottom: 1px solid mix(#000, $border-color, 25%);
+  // border-bottom: 1px solid mix(#000, $border-color, 25%);
+  border: 1px solid mix(#000, $border-color, 25%);
 }
 
 tr,
