Add bigfoot footnote

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,6 +1,23 @@
 <!-- start custom head snippets -->
 
+<!-- Google Adsense -->
 <script data-ad-client="ca-pub-6654181858131383" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+<!-- Bigfoot footnote -->
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script type="text/javascript" src="/assets/js/custom_plugins/bigfoot.min.js"></script>
+<script type="text/javascript">
+  var bigfoot = $.bigfoot(
+    {
+      actionOriginalFN: "ignore",
+      positionContent: "true",
+      activateOnHover: "true",
+      deleteOnUnhover: "true",
+      hoverDelay: "150"
+      // anchorPattern: /(fn|footnote|note)[\-_\d]/gi
+    }
+  );
+</script>
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
