--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -33,6 +33,9 @@
       <h3 class="author__name" itemprop="name">{{ author.name }}</h3>
     {% endif %}
     {% if author.bio %}
+      <!-- <div class="author__bio" itemprop="description">
+        {{ author.bio | markdownify }}
+      </div> -->
       <div class="author__bio" itemprop="description">
         {{ author.bio | markdownify }}
       </div>
